# imsg-bridge

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml  setup.sh
.github/workflows/: ci.yml
imsg_bridge/: __init__.py  bridge.py  cli.py
imsg_gtk/: README.md  api.py  app.py  asyncbridge.py  bubble.py  chatview.py  config.py  install-linux.sh  pyproject.toml  sidebar.py  style.css  utils.py  window.py
tests/: test_bridge.py
