[project]
name = "imsg-bridge"
version = "0.1.0"
description = "A lightweight REST + WebSocket bridge for iMessage, powered by the imsg CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Daniel", email = "heyfinal@users.noreply.github.com" },
]
keywords = ["imessage", "macos", "bridge", "api", "fastapi", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pre-commit>=4.3.0",
    "pytest>=8.3.0",
    "ruff>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/heyfinal/imsg-bridge"
Repository = "https://github.com/heyfinal/imsg-bridge"
Issues = "https://github.com/heyfinal/imsg-bridge/issues"

[project.scripts]
imsg-bridge = "imsg_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imsg_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"imsg_gtk/*.py" = ["E402"]
