[project]
name = "imsg-gtk"
version = "0.2.0"
description = "Native GTK4 iMessage client for Linux — connects to imsg-bridge on macOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Daniel", email = "heyfinal@users.noreply.github.com" },
]
keywords = ["imessage", "gtk", "linux", "chat", "client"]
dependencies = [
    "aiohttp>=3.9.0",
    "PyGObject>=3.46.0",
]

[project.urls]
Homepage = "https://github.com/heyfinal/imsg-bridge"
Repository = "https://github.com/heyfinal/imsg-bridge"

[project.scripts]
imsg-gtk = "imsg_gtk.app:main"
[project.gui-scripts]
imsg-gtk = "imsg_gtk.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imsg_gtk"]
